--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@conflow/backend",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
