--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@conflow/backend": "^0.1.0"
   },
   "scripts": {
-    "serve": "yarn workspace @conflow/frontend serve",
-    "build": "yarn workspace @conflow/backend build"
+    "start": "wt -d packages/frontend --title conflow-frontend cmd /k yarn serve --port 8080; split-pane -d packages/backend --title conflow-backend cmd /k yarn develop",
+    "serve:fe": "yarn workspace @conflow/frontend serve",
+    "build:fe": "yarn workspace @conflow/frontend build",
+    "serve:be": "yarn workspace @conflow/backend develop",
+    "build:be": "yarn workspace @conflow/backend build"
   },
   "workspaces": [
     "packages/*"
