--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,7 +17,7 @@
     "vue": "^3.0.7",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "^4.0.0-0",
-    "vuestic-ui": "^1.2.1"
+    "vuestic-ui": "^1.2.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
@@ -41,8 +41,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "~3.9.3",
-    "vue-cli-plugin-vuestic-ui": "~1.0.0-alpha.2"
+    "typescript": "^4.4.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
