--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "lerna": "^4.0.0"
   },
   "dependencies": {
-    "@conflow/frontend": "^0.1.0",
+    "@conflow/frontend-vite": "^0.0.1",
     "@conflow/backend": "^0.1.0"
   },
   "scripts": {
     "start": "wt -d packages/frontend --title conflow-frontend cmd /k yarn serve --port 8080; split-pane -d packages/backend --title conflow-backend cmd /k yarn develop",
-    "serve:fe": "yarn workspace @conflow/frontend serve",
-    "build:fe": "yarn workspace @conflow/frontend build",
+    "serve:fe": "yarn workspace @conflow/frontend-vite dev",
+    "build:fe": "yarn workspace @conflow/frontend-vite build",
     "serve:be": "yarn workspace @conflow/backend develop",
     "build:be": "yarn workspace @conflow/backend build"
   },
