--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/prismjs": "^1.16.6",
     "axios": "^0.24.0",
     "class-transformer": "^0.4.0",
     "material-design-icons-iconfont": "^6.1.1",
+    "prismjs": "^1.25.0",
     "reflect-metadata": "^0.1.13",
     "vue": "^3.2.16",
     "vue-router": "4.0.12",
