--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -7,14 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/codemirror": "^5.60.5",
     "@types/prismjs": "^1.16.6",
     "@types/webpack-env": "^1.16.3",
     "axios": "^0.24.0",
     "class-transformer": "^0.4.0",
+    "codemirror-editor-vue3": "^0.2.4",
     "material-design-icons-iconfont": "^6.1.1",
     "prismjs": "^1.25.0",
     "reflect-metadata": "^0.1.13",
     "vue": "^3.2.16",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "4.0.12",
     "vuestic-ui": "^1.3.1"
   },
