--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "@types/codemirror": "^5.60.5",
+    "@types/js-beautify": "^1.13.3",
     "@types/prismjs": "^1.16.6",
     "@types/webpack-env": "^1.16.3",
     "axios": "^0.24.0",
     "class-transformer": "^0.4.0",
     "codemirror-editor-vue3": "^0.2.4",
+    "js-beautify": "^1.14.0",
     "material-design-icons-iconfont": "^6.1.1",
     "prismjs": "^1.25.0",
     "reflect-metadata": "^0.1.13",
