--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -16,6 +16,7 @@
     "codemirror-editor-vue3": "^0.2.4",
     "js-beautify": "^1.14.0",
     "material-design-icons-iconfont": "^6.1.1",
+    "mitt": "^3.0.0",
     "prismjs": "^1.25.0",
     "qs": "^6.10.2",
     "reflect-metadata": "^0.1.13",
