--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -23,16 +23,16 @@
     "vue": "^3.2.16",
     "vue-codemirror": "^4.0.6",
     "vue-router": "4.0.12",
-    "vuestic-ui": "^1.3.3"
+    "vuestic-ui": "^1.3.4-alpha.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
     "@vitejs/plugin-vue": "^1.9.3",
-    "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.9",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
-    "tailwindcss": "^2.2.17",
+    "tailwindcss": "^3.0.13",
     "typescript": "4.4.4",
     "vite": "^2.6.4",
     "vue-tsc": "^0.29.0"
