--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -10,6 +10,7 @@
     "@types/codemirror": "^5.60.5",
     "@types/js-beautify": "^1.13.3",
     "@types/prismjs": "^1.16.6",
+    "@types/qs": "^6.9.7",
     "@types/webpack-env": "^1.16.3",
     "axios": "^0.24.0",
     "class-transformer": "^0.5.1",
