--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "wt -d packages/frontend --title conflow-frontend cmd /k yarn serve --port 8080; split-pane -d packages/backend --title conflow-backend cmd /k yarn develop",
     "serve:fe": "yarn workspace @conflow/frontend-vite dev",
-    "build:fe": "yarn workspace @conflow/frontend-vite build",
+    "build:fe": "yarn workspace @conflow/frontend-vite build"
   },
   "workspaces": [
     "packages/*"
