fix: package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "lerna": "^4.0.0"
   },
   "dependencies": {
-    "@conflow/frontend-vite": "^0.0.1",
-    "@conflow/backend": "^0.1.0"
+    "@conflow/frontend-vite": "^0.0.1"
   },
   "scripts": {
     "start": "wt -d packages/frontend --title conflow-frontend cmd /k yarn serve --port 8080; split-pane -d packages/backend --title conflow-backend cmd /k yarn develop",
