--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -21,6 +21,7 @@
     "prismjs": "^1.25.0",
     "qs": "^6.10.3",
     "reflect-metadata": "^0.1.13",
+    "tslib": "^2.4.0",
     "vue": "^3.2.16",
     "vue-codemirror": "^4.0.6",
     "vue-router": "4.0.12",
