--- a/packages/frontend-vite/package.json
+++ b/packages/frontend-vite/package.json
@@ -25,7 +25,7 @@
     "vue": "^3.2.16",
     "vue-codemirror": "^4.0.6",
     "vue-router": "4.0.12",
-    "vuestic-ui": "^1.3.4-alpha.0"
+    "vuestic-ui": "^1.4.9"
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
